--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="avatar">avatar</string>
     <string name="drawer_open">open</string>
     <string name="drawer_close">close</string>
+    <string name="playback_channel">playback</string>
 </resources>
